feat: add get messages http handler
