# docs/swagger.yaml
@@ -1,4 +1,15 @@
 definitions:
+  presenter.SMSResp:
+    properties:
+      id:
+        type: integer
+      message:
+        type: string
+      recipient:
+        type: string
+      status:
+        $ref: '#/definitions/presenter.Status'
+    type: object
   presenter.SendSMSReq:
     properties:
       message:
@@ -28,6 +39,45 @@ definitions:
 info:
   contact: {}
 paths:
+  /sms/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a SMS message by ID
+      parameters:
+      - description: SMS ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/presenter.SMSResp'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get SMS message
+      tags:
+      - SMS
   /sms/send:
     post:
       consumes:
